@@ -1350,8 +1350,7 @@ MagickExport unsigned int SetImageAttribute(Image *image,const char *key,
     return(False);
   attribute->key=AllocateString(key);
   if ((LocaleNCompare(key,"IPTC",4) == 0) ||
-      (LocaleNCompare(key,"8BIM",4) == 0) ||
-        (LocaleNCompare(key,"EXIF",4) == 0))
+      (LocaleNCompare(key,"8BIM",4) == 0) || (LocaleNCompare(key,"EXIF",4) == 0))
     attribute->value=AllocateString(value);
   else
     attribute->value=TranslateText((ImageInfo *) NULL,image,value);
